Bug 43316 - swrast/s_texfetch.c:1274: _mesa_get_texel_fetch_func: Assertion `texfetch_funcs[fmt].Name == fmt' failed.
Summary: swrast/s_texfetch.c:1274: _mesa_get_texel_fetch_func: Assertion `texfetch_fun...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: Other Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-28 11:58 UTC by Vinson Lee
Modified: 2011-11-28 16:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
patch to add missing table entry (443 bytes, patch)
2011-11-28 12:52 UTC, Brian Paul
Details | Splinter Review

Description Vinson Lee 2011-11-28 11:58:00 UTC
mesa: c5012c1d56dfbf11cd631b3b37890b40d56ac884 (master)

Run piglit fdo10370 on swrast.

$ ./bin/fdo10370 -auto
fdo10370: swrast/s_texfetch.c:1274: _mesa_get_texel_fetch_func: Assertion `texfetch_funcs[fmt].Name == fmt' failed.
Aborted (core dumped)


(gdb) bt
#0  0x0032f416 in __kernel_vsyscall ()
#1  0x004db941 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#2  0x004dee42 in abort () at abort.c:92
#3  0x004d48e8 in __assert_fail (assertion=0xe0ac38 "texfetch_funcs[fmt].Name == fmt", file=0xe0ac21 "swrast/s_texfetch.c", line=1274, function=0xe0ad0c "_mesa_get_texel_fetch_func")
    at assert.c:81
#4  0x00c83fa8 in _mesa_get_texel_fetch_func (format=MESA_FORMAT_RGBA8888, dims=2) at swrast/s_texfetch.c:1274
#5  0x00c84173 in set_fetch_functions (texImage=0x927f970, dims=2) at swrast/s_texfetch.c:1318
#6  0x00c84236 in _mesa_update_fetch_functions (texObj=0x9276678) at swrast/s_texfetch.c:1333
#7  0x00c6311a in _swrast_update_texture_samplers (ctx=0x9096c78) at swrast/s_context.c:480
#8  0x00c6337e in _swrast_validate_derived (ctx=0x9096c78) at swrast/s_context.c:570
#10 0x00c634b9 in _swrast_Triangle (ctx=0x9096c78, v0=0xb6e05228, v1=0xb6e05430, v2=0xb6e05020) at swrast/s_context.c:628
#11 0x00ca44fe in triangle_rgba (ctx=0x9096c78, e0=1, e1=2, e2=0) at swrast_setup/ss_tritmp.h:176
#12 0x00c291a9 in _tnl_render_poly_verts (ctx=0x9096c78, start=0, count=4, flags=57) at tnl/t_vb_rendertmp.h:352
#13 0x00c2b16f in run_render (ctx=0x9096c78, stage=0x9107628) at tnl/t_vb_render.c:321
#14 0x00c1c0e5 in _tnl_run_pipeline (ctx=0x9096c78) at tnl/t_pipeline.c:163
#15 0x00c1d5cf in _tnl_draw_prims (ctx=0x9096c78, arrays=0x90f5308, prim=0x90f3c64, nr_prims=1, ib=0x0, min_index=0, max_index=3) at tnl/t_draw.c:538
#16 0x00c1d2e3 in _tnl_vbo_draw_prims (ctx=0x9096c78, arrays=0x90f5308, prim=0x90f3c64, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', min_index=0, max_index=3) at tnl/t_draw.c:438
#17 0x00c04608 in vbo_exec_vtx_flush (exec=0x90f3850, keepUnmapped=1 '\001') at vbo/vbo_exec_draw.c:405
#18 0x00bfe11f in vbo_exec_FlushVertices_internal (exec=0x90f3850, unmap=1 '\001') at vbo/vbo_exec_api.c:444
#19 0x00c00138 in vbo_exec_FlushVertices (ctx=0x9096c78, flags=1) at vbo/vbo_exec_api.c:1188
#20 0x00d4db5e in enable_texture (ctx=0x9096c78, state=0 '\000', texBit=128) at main/enable.c:247
#21 0x00d4fd31 in _mesa_set_enable (ctx=0x9096c78, cap=3553, state=0 '\000') at main/enable.c:596
#22 0x00d51168 in _mesa_Disable (cap=3553) at main/enable.c:967
#23 0x00b40deb in save_Disable (cap=3553) at main/dlist.c:2205
#24 0x08049164 in display () at piglit/tests/bugs/fdo10370.c:81
#25 0x00490820 in fghRedrawWindow (window=0x9094838, enumerator=0xbfecb148) at freeglut_main.c:210
#26 fghcbDisplayWindow (window=0x9094838, enumerator=0xbfecb148) at freeglut_main.c:227
#27 0x00494660 in fgEnumWindows (enumCallback=0x490790 <fghcbDisplayWindow>, enumerator=0xbfecb148) at freeglut_structure.c:394
#28 0x00490cdb in fghDisplayAll () at freeglut_main.c:249
#29 glutMainLoopEvent () at freeglut_main.c:1450
#30 0x00491605 in glutMainLoop () at freeglut_main.c:1498
#31 0x08049658 in main (argc=2, argv=0xbfecb3c4) at piglit/tests/bugs/fdo10370.c:170
(gdb) frame 4
#4  0x00c83fa8 in _mesa_get_texel_fetch_func (format=MESA_FORMAT_RGBA8888, dims=2) at swrast/s_texfetch.c:1274
1274	      assert(texfetch_funcs[fmt].Name == fmt);
(gdb) print texfetch_funcs[fmt].Name
$1 = MESA_FORMAT_NONE
(gdb) print fmt
$2 = MESA_FORMAT_ARGB2101010_UINT
Comment 1 Vinson Lee 2011-11-28 12:24:31 UTC
f449be660e70aac2aefd2ce84581e137de25520b is the first bad commit
commit f449be660e70aac2aefd2ce84581e137de25520b
Author: Dave Airlie <airlied@redhat.com>
Date:   Sun Nov 27 16:21:02 2011 +0000

    mesa/format: add mesa MESA_FORMAT_ARGB2101010_UINT support.
    
    This format is used in the ARB_texture_rgb10_a2ui spec.
    
    It adds core mesa support, texformat + texstore support, format_unpack
    and fbobject.c (all patches from list merged + fixed up).
    
    also fixes some whitespace issues.
    
    Parts were:
    Reviewed-by: Eric Anholt <eric@anholt.net>
    
    Signed-off-by: Dave Airlie <airlied@redhat.com>

:040000 040000 a34f712dab36065fd0383ea8057c4d6fe442964a f844815eb9794ca4c7582b7752de2505f376bd23 M	src
bisect run success
Comment 2 Brian Paul 2011-11-28 12:52:51 UTC
Created attachment 53914 [details] [review]
patch to add missing table entry

This should do it, Vinson.  Can you test?
Comment 3 Vinson Lee 2011-11-28 13:26:14 UTC
(In reply to comment #2)
> Created attachment 53914 [details] [review] [review]
> patch to add missing table entry
> 
> This should do it, Vinson.  Can you test?

Patch 53914 fixes fdo10370 on swrast.

Tested-by: Vinson Lee <vlee@vmware.com>
Comment 4 Brian Paul 2011-11-28 14:42:21 UTC
Fixed w/ commit e32ada1b267c9cc84b84400a619cbca14aba2207
Comment 5 Vinson Lee 2011-11-28 16:33:43 UTC
mesa: 8f15c31338e4c0e105ddc602773682375395b00b (master)

Verified fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.